--- a/django-integracao-de-modelos/templates/receitas/partials/_menu.html
+++ b/django-integracao-de-modelos/templates/receitas/partials/_menu.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <form action="#" method="post">
+        <form action="{% url "buscar" %}">
           <input type="search" name="search" placeholder="O que está procurando...">
           <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
         </form>
