--- a/django-integracao-de-modelos/templates/receitas/receita.html
+++ b/django-integracao-de-modelos/templates/receitas/receita.html
@@ -11,7 +11,7 @@
   {% include "receitas/partials/_menu.html" %}
 
   <!-- Receipe Post Search -->
-  <div class="receipe-post-search mb-80">
+<!--  <div class="receipe-post-search mb-80">
     <div class="container">
       <form action="#" method="post">
         <div class="row">
@@ -28,7 +28,7 @@
         </div>
       </form>
     </div>
-  </div>
+    </div> ---> 
 
   <!-- Receipe Slider -->
   <div class="container">
