Fim da parte 1 do curso django-formularios-requisicoes

--- a/django-formularios-requisicoes/templates/receitas/receita.html
+++ b/django-formularios-requisicoes/templates/receitas/receita.html
@@ -1,4 +1,4 @@
-{% extends "receitas/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
   
@@ -8,7 +8,7 @@
     <img src="{% static "img/core-img/hamburger.png" %}" alt="">
   </div>
 
-  {% include "receitas/partials/_menu.html" %}
+  {% include "partials/_menu.html" %}
 
   <!-- Receipe Post Search -->
 <!--  <div class="receipe-post-search mb-80">
@@ -84,6 +84,6 @@
         </div>
         <!-- Ingredientes -->
 
-    {% include "receitas/partials/_footer.html" %}
+    {% include "partials/_footer.html" %}
 
 {% endblock %}
