--- a/django-formularios-requisicoes/templates/receitas/buscar.html
+++ b/django-formularios-requisicoes/templates/receitas/buscar.html
@@ -1,4 +1,4 @@
-{% extends "receitas/base.html" %}
+{% extends "base.html" %}
 {% load static %}
 {% block content %}
   
@@ -8,7 +8,7 @@
     <img src="{% static "img/core-img/pizza.png" %}" alt="">
   </div>
 
-  {% include "receitas/partials/_menu.html" %}
+  {% include "partials/_menu.html" %}
 
   <!-- ##### Best Receipe Area Start ##### -->
   <section class="best-receipe-area">
@@ -42,6 +42,6 @@
   </section>
   <!-- ##### Best Receipe Area End ##### -->
 
-  {% include "receitas/partials/_footer.html" %}
+  {% include "partials/_footer.html" %}
 
 {% endblock %}
