--- a/django-formularios-requisicoes/templates/partials/_menu.html
+++ b/django-formularios-requisicoes/templates/partials/_menu.html
@@ -76,6 +76,7 @@
                 {% if user.is_authenticated %}
                     <li><a href="{% url "index" %}">Home</a></li>
                     <li><a href="{% url "dashboard" %}">Minhas Receitas</a></li>
+                    <li><a href="{% url "criar_receita" %}">Criar Receita</a></li>
                     <li><a href="{% url "logout" %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url "index" %}">Home</a></li>
